crates/daemon/src/snapshots/daemon__jobs__tests__partial_update_reconciliation_and_reporting.snap
---
source: crates/daemon/src/jobs.rs
expression: "(streamed_error, job.status, failure.subject,\ncomposer_track.installed_version, composer_current,)"
---
(
    "Managed Resource update failed with `Managed Resource update partially completed: updated 1 artifact(s) (composer track 2 to 2.8.1-pv1); remaining update failed: Managed Resource command failed: HTTP request failed for `https://artifacts.example.test/caddy-2.11.5-pv1-any.tar.gz`: missing scripted archive`; reconciliation also failed: System reconciliation failed: Managed Resource default installs failed: composer 3: daemon protocol error: Composer setup default expected track `2`, got `3`; I/O error: No such file or directory (os error 2)",
    Failed,
    UpdateAssessment,
    Some(
        "2.8.1-pv1",
    ),
    "releases/2.8.1-pv1",
)
