crates/daemon/src/snapshots/daemon__jobs__tests__system_coverage_excludes_failed_projects_and_their_resources.snap
---
source: crates/daemon/src/jobs.rs
expression: coverage
---
[
    SystemReconciliation,
    GatewayRuntime,
    Project {
        id: "<project_id>",
    },
    Resource {
        name: "redis",
        track: "8.0",
    },
]
