crates/daemon/src/snapshots/daemon__jobs__tests__targeted_resource_scope_partial_failure.snap
---
source: crates/daemon/src/jobs.rs
expression: partial_snapshot
---
(
    "Managed Resource mailpit track 1.0 reconciled; Project env reconciled for 1 of 2 Projects; failures: beta.test: Project `<project_id>` env dependencies cannot be refreshed: serving mode, hostnames, resource tracks, or allocation identities differ from their last applied state",
    [
        Resource {
            name: "mailpit",
            track: "1.0",
        },
        Project {
            id: "<project_id>",
        },
    ],
    [
        Some(
            Rendered,
        ),
        Some(
            Failed,
        ),
        None,
    ],
    [
        (
            "mailpit",
            "1.0",
        ),
    ],
    "# >>> PV MANAGED\nMAIL_HOST=127.0.0.1\n# <<< PV MANAGED\n",
    false,
    false,
)
