crates/daemon/src/snapshots/daemon__jobs__tests__targeted_resource_scope_success.snap
---
source: crates/daemon/src/jobs.rs
expression: success_snapshot
---
(
    "Managed Resource mailpit track 1.0 reconciled; Project env reconciled for 2 Projects",
    [
        Resource {
            name: "mailpit",
            track: "1.0",
        },
        Project {
            id: "<project_id>",
        },
        Project {
            id: "<project_id>",
        },
    ],
    [
        Some(
            Rendered,
        ),
        Some(
            Warning,
        ),
        None,
    ],
    "# >>> PV MANAGED\nMAIL_HOST=127.0.0.1\n# <<< PV MANAGED\n",
    "EXISTING=beta\n# >>> PV MANAGED\nMAIL_HOST=127.0.0.1\n# <<< PV MANAGED\n",
    false,
)
