crates/daemon/src/snapshots/daemon__jobs__tests__unsafe_resource_scopes_are_promoted_exactly.snap
---
source: crates/daemon/src/jobs.rs
expression: effective_scopes
---
[
    (
        Resource {
            name: ReconciliationScopeComponent(
                "php",
            ),
            track: ReconciliationScopeComponent(
                "8.4",
            ),
        },
        System,
    ),
    (
        Resource {
            name: ReconciliationScopeComponent(
                "frankenphp",
            ),
            track: ReconciliationScopeComponent(
                "8.4",
            ),
        },
        System,
    ),
    (
        Resource {
            name: ReconciliationScopeComponent(
                "caddy",
            ),
            track: ReconciliationScopeComponent(
                "2",
            ),
        },
        Resource {
            name: ReconciliationScopeComponent(
                "caddy",
            ),
            track: ReconciliationScopeComponent(
                "2",
            ),
        },
    ),
    (
        Resource {
            name: ReconciliationScopeComponent(
                "mailpit",
            ),
            track: ReconciliationScopeComponent(
                "1.0",
            ),
        },
        Resource {
            name: ReconciliationScopeComponent(
                "mailpit",
            ),
            track: ReconciliationScopeComponent(
                "1.0",
            ),
        },
    ),
]
